# Connect-4

./: .gitignore  README.md  config.sh  run.sh
.github/workflows/: cmake.yml
source/: CMakeLists.txt  main.cpp
source/board/: board.cpp  board.hpp
source/cell/: cell.cpp  cell.hpp
source/game/: CMakeLists.txt  game.cpp  game.hpp
source/point/: CMakeLists.txt  point.cpp  point.hpp
